<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  android:id="@+id/message_Frame"
  android:layout_width="match_parent"
  android:layout_height="wrap_content"
  android:layout_margin="4dp"
  android:padding="4dp"
  android:background="@drawable/card_background">

  <android.support.v7.widget.CardView
    android:id="@+id/cardViewMessage"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="4dp"
    android:padding="4dp"
    app:cardCornerRadius="@dimen/Gen_three"
    app:cardElevation="14dp">

    <RelativeLayout
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:layout_margin="4dp"
      android:padding="4dp">

      <LinearLayout
        android:id="@+id/questionlayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:orientation="vertical">
        <TextView
          android:id="@+id/textViewQuestion"
          android:textStyle="bold"
          android:layout_width="match_parent"
          android:layout_height="0dp"
          android:layout_weight="1"
          android:layout_margin="4dp"
          android:padding="4dp"
          android:text="@string/place_holder"
          android:textSize="18sp"/>
      </LinearLayout>
      <LinearLayout
        android:id="@+id/checks"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="57dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:orientation="horizontal"
        android:layout_alignParentLeft="true">
        <CheckBox
          android:id="@+id/checkBoxNo"
          android:textStyle="bold"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_weight="1"
          android:layout_margin="4dp"
          android:padding="4dp"
          android:text="@string/no"
          android:textSize="@dimen/text10"
          android:typeface="monospace"/>
        <CheckBox
          android:id="@+id/checkBoxYes"
          android:textStyle="bold"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_weight="1"
          android:layout_margin="4dp"
          android:padding="4dp"
          android:text="@string/yes"
          android:textSize="@dimen/text10"
          android:typeface="monospace"/>
      </LinearLayout>
      <LinearLayout
        android:id="@+id/info_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="112dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:padding="4dp"
        android:orientation="horizontal"
        android:layout_alignParentLeft="true">
        <TextView
          android:id="@+id/textViewInfo"
          android:textStyle="bold"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_margin="4dp"
          android:padding="4dp"
          android:text="@string/info"
          android:typeface="monospace"
          app:fontFamily="sans-serif-condensed"/>
        <TextView
          android:id="@+id/textViewLevel"
          android:textStyle="bold"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_weight="1"
          android:layout_margin="4dp"
          android:padding="4dp"
          android:text="@string/place_holder"
          android:typeface="sans"
          app:fontFamily="serif-monospace"/>
      </LinearLayout>
    </RelativeLayout>

  </android.support.v7.widget.CardView>


</FrameLayout>