<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:pv="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:id="@+id/lin_lay"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:paddingTop="@dimen/activity_vertical_margin"
  android:paddingBottom="@dimen/activity_vertical_margin"
  android:paddingLeft="@dimen/activity_horizontal_margin"
  android:paddingRight="@dimen/activity_horizontal_margin"
  android:background="@color/colorPrimary"
  tools:context=".activities.SplashActivity">

  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
      android:id="@+id/MyName"
      android:textStyle="bold"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_gravity="center_horizontal"
      android:background="@color/colorPrimary"
      android:text="@string/busstop_text"
      android:textAppearance="?android:attr/textAppearanceLarge"
      android:textColor="@color/white"/>
  </LinearLayout>

  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="50dp"
    android:layout_alignParentEnd="false"
    android:layout_alignParentLeft="false"
    android:layout_alignParentRight="false"
    android:layout_alignParentStart="false"
    android:orientation="vertical">

    <ImageView
      android:id="@+id/splash"
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:layout_gravity="center"
      android:contentDescription="@string/todo"
      android:src="@drawable/ic_qr_code"/>
  </LinearLayout>

  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="154dp"
    android:layout_marginBottom="12dp"
    android:layout_alignParentBottom="true"
    android:layout_centerHorizontal="true"
    android:orientation="vertical">

    <TextView
      android:id="@+id/textView10"
      android:textStyle="bold"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_gravity="center"
      android:text="@string/my_name"
      android:textAlignment="center"
      android:textAppearance="?android:attr/textAppearanceLarge"
      android:textColor="@color/white"
      android:typeface="serif"/>

    <me.wangyuwei.particleview.ParticleView
      android:id="@+id/pv1"
      android:layout_width="match_parent"
      android:layout_height="0dp"
      android:layout_weight="1"
      pv:pv_background_color="@color/colorPrimary"
      pv:pv_host_text="DENSO"
      pv:pv_particle_text="MANUFACTURING"
      pv:pv_text_color="@color/TextColourWhite"/>

  </LinearLayout>

</RelativeLayout>