<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:id="@+id/relativeLayout"
  android:layout_width="match_parent"

  android:layout_height="match_parent"
  android:background="@color/white"
  tools:context=".activities.CleanUpMyMess">


  <RadioGroup
    android:id="@+id/radioGroupShifts"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_margin="4dp"
    android:layout_marginStart="8dp"
    android:layout_marginEnd="8dp"
    android:padding="4dp"
    android:orientation="horizontal"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="1.0"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent">
    <RadioButton
      android:id="@+id/radioButtonDays"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_weight="1"
      android:layout_marginTop="16dp"
      android:layout_marginEnd="24dp"
      android:gravity="fill"
      android:text="@string/days"
      app:layout_constraintEnd_toStartOf="@+id/radioButtonYellow"
      app:layout_constraintTop_toTopOf="parent"/>
    <RadioButton
      android:id="@+id/radioButtonBlue"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_weight="1"
      android:layout_marginTop="16dp"
      android:layout_marginEnd="32dp"
      android:gravity="fill"
      android:text="@string/blue"
      app:layout_constraintEnd_toStartOf="@+id/radioButtonDays"
      app:layout_constraintTop_toTopOf="parent"/>
    <RadioButton
      android:id="@+id/radioButtonYellow"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_weight="1"
      android:layout_marginTop="16dp"
      android:layout_marginEnd="16dp"
      android:gravity="fill"
      android:text="@string/yellow"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintTop_toTopOf="parent"/>
    <RadioButton
      android:id="@+id/radioButtonRed"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_weight="1"
      android:layout_marginTop="16dp"
      android:layout_marginStart="8dp"
      android:layout_marginEnd="8dp"
      android:layout_marginLeft="8dp"
      android:layout_marginRight="8dp"
      android:gravity="fill"
      android:text="@string/red"
      app:layout_constraintEnd_toStartOf="@+id/radioButtonBlue"
      app:layout_constraintHorizontal_bias="0.362"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"/>
  </RadioGroup>
  <android.support.design.widget.FloatingActionButton
    android:id="@+id/myFAButtonCamera"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_margin="24dp"
    android:layout_marginBottom="55dp"
    android:layout_marginEnd="24dp"
    android:padding="4dp"
    android:clickable="true"
    android:focusable="true"
    android:src="@drawable/ic_camera_black_24dp"
    app:backgroundTint="@android:color/transparent"
    app:elevation="24dp"
    app:fabSize="mini"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"/>
  <android.support.design.widget.FloatingActionButton
    android:id="@+id/myFAButtonSend"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_margin="24dp"
    android:layout_marginBottom="55dp"
    android:layout_marginEnd="24dp"
    android:padding="4dp"
    android:clickable="true"
    android:focusable="true"
    android:src="@drawable/ic_send_black_24dp"
    app:backgroundTint="@android:color/transparent"
    app:elevation="24dp"
    app:fabSize="mini"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"/>
  <android.support.design.widget.FloatingActionButton
    android:id="@+id/myFAButton"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_margin="24dp"
    android:layout_marginBottom="55dp"
    android:layout_marginEnd="24dp"
    android:padding="4dp"
    android:clickable="true"
    android:focusable="true"
    android:scaleType="center"
    android:soundEffectsEnabled="true"
    app:background="@android:color/transparent"
    app:backgroundTint="@android:color/transparent"
    app:elevation="24dp"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:rippleColor="@android:color/holo_orange_dark"
    app:srcCompat="@drawable/ic_cancel_black_24dp"
    tools:ignore="VectorDrawableCompat"/>

  <android.support.design.widget.TextInputLayout
    android:id="@+id/username_text_input_layout"
    android:layout_width="256dp"
    android:layout_height="wrap_content"
    android:layout_margin="4dp"
    android:layout_marginStart="8dp"
    android:padding="4dp"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/radioGroupShifts">
    <android.support.design.widget.TextInputEditText
      android:id="@+id/editTextAssociate"
      android:textStyle="bold"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_margin="4dp"
      android:padding="4dp"
      android:ems="10"
      android:hint="@string/associate_name"
      android:inputType="textCapWords"
      android:singleLine="true"
      android:typeface="serif"/>
  </android.support.design.widget.TextInputLayout>


  <android.support.v7.widget.RecyclerView
    android:id="@+id/rv"
    android:layout_width="wrap_content"
    android:layout_height="0dp"
    android:layout_margin="4dp"
    android:layout_marginStart="8dp"
    android:layout_marginEnd="8dp"
    android:padding="4dp"
    android:background="@color/white"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.0"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/username_text_input_layout"
    app:layout_constraintVertical_bias="0.0">
  </android.support.v7.widget.RecyclerView>
  <Spinner
    android:id="@+id/spinner_location"
    android:layout_width="wrap_content"
    android:layout_height="55dp"
    android:layout_margin="4dp"
    android:padding="4dp"
    android:spinnerMode="dialog"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.0"
    app:layout_constraintStart_toEndOf="@+id/username_text_input_layout"
    app:layout_constraintTop_toBottomOf="@+id/radioGroupShifts"/>
  <FrameLayout
    android:id="@+id/container"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="8dp"
    android:layout_marginBottom="8dp"
    android:layout_marginStart="8dp"
    android:layout_marginEnd="8dp"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="@+id/radioGroupShifts">

  </FrameLayout>


</android.support.constraint.ConstraintLayout>